# ERP-Travel

./: .env.example  .env.production.example  .gitignore  .gitmodules  BRANDING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ERP-Ecosystem-Analysis-Report.docx  ERP_Ecosystem_Overview.md  ERP_Visualization.html  FEATURE_WORKLOG.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  TASK-GRAPH-PHASE1.md  UPGRADE_PLAN.md  Vibecode-ERP-Master-Plan.docx  VietERP_OpenSource_Readiness_Report.docx  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  fix-enums.sql  liphoco-erp-schema.sql  next.config.security.js  package-lock.json  package.json  setup-liphoco.sh  tailwind.config.ts  turbo.json
apps/MRP/ml-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
apps/MRP/ml-service/app/: __init__.py  config.py  main.py
apps/MRP/ml-service/app/api/: deps.py
apps/MRP/ml-service/app/api/routes/: __init__.py  anomaly.py  forecast.py  health.py  leadtime.py  models.py  optimization.py
apps/MRP/ml-service/app/core/: database.py  exceptions.py  logging.py
apps/MRP/ml-service/app/ml/: __init__.py  base.py
apps/MRP/ml-service/app/ml/anomaly/: __init__.py  isolation_forest.py
apps/MRP/ml-service/app/ml/forecasting/: __init__.py  arima_model.py  ensemble.py  (+2 more)
apps/MRP/ml-service/app/models/: enums.py  schemas.py
apps/MRP/ml-service/app/services/: forecast_service.py  model_service.py  optimization_service.py  prediction_service.py
apps/MRP/ml-service/models/: .gitkeep
apps/MRP/ml-service/tests/: test_forecast.py  test_optimization.py
(+6825 files in other folders)
